--- a/app/src/main/res/layout/activity_view_journey.xml
+++ b/app/src/main/res/layout/activity_view_journey.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ViewJourneyActivity">
 
 <!--    <androidx.constraintlayout.widget.Group-->
@@ -98,6 +99,16 @@
             android:translationY="80dp"
             tools:listitem="@layout/recyclerview_item" />
 
-<!--    </androidx.constraintlayout.widget.Group>-->
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/nav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="?android:attr/windowBackground"
+            android:translationY="610dp"
+            app:menu="@menu/bottom_nav_menu" />
+
+        <!--    </androidx.constraintlayout.widget.Group>-->
 
 </FrameLayout>
