--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="@+id/mainFragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+
         app:menu="@menu/bottom_nav_menu" />
 
 
